--- a/invessence/modules/web/src/main/webapp/advisor/tradeProfile.xhtml
+++ b/invessence/modules/web/src/main/webapp/advisor/tradeProfile.xhtml
@@ -76,7 +76,7 @@
                                      validatorMessage="Select one investment goal.">
                         <f:selectItem itemLabel="Choose One" itemValue=""/>
                         <f:selectItem itemLabel="Non-Taxable" itemValue="Non-Taxable"/>
-                        <f:selectItem itemLabel="Taxable" itemValue="Taxable" itemDisabled="true"/>
+                        <f:selectItem itemLabel="--Taxable--" itemValue="Taxable" itemDisabled="true"/>
                         <f:selectItem itemLabel="Individual" itemValue="Individual"/>
                         <f:selectItem itemLabel="Joint" itemValue="Joint"/>
                         <f:selectItem itemLabel="Trust" itemValue="Trust"/>
