Introduced Slider in Advisor and Consumer model

--- a/invessence/modules/web/src/main/webapp/pages/consumer/details.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/details.xhtml
@@ -13,7 +13,7 @@
 </h:head>
 
 <h:body>
-    <p:outputPanel deferred="true">
+    <p:outputPanel style="border: 0px; padding: 0px; margin: 0px">
         <p:tabView widgetVar="detailTabView"
                    style="border: 1px solid black;"
                    dynamic="true" cache="false">
