--- a/invessence/modules/web/src/main/webapp/pages/consumer/graphs.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/graphs.xhtml
@@ -15,7 +15,7 @@
 <h:body>
     <script type="text/javascript" src="/js/invCharts.js"></script>
 
-    <p:outputPanel deferred="true">
+    <p:outputPanel style="border: 0px; padding: 0px; margin: 0px">
         <p:tabView widgetVar="graphTabView"
                    styleClass="charts"
                    dynamic="true" cache="false">
