--- a/invessence/modules/web/src/main/webapp/pages/consumer/add.xhtml
+++ b/invessence/modules/web/src/main/webapp/pages/consumer/add.xhtml
@@ -2,58 +2,196 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
+
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:pe="http://primefaces.org/ui/extensions">
+      xmlns:pe="http://primefaces.org/ui/extensions"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
 
-<h:head></h:head>
+<h:head>
+</h:head>
+
 <f:metadata>
-    <f:viewParam name="acct" value="#{cBean.beanAcctnum}"/>
-    <f:event type="preRenderView" listener="#{cBean.preRenderView}"/>
+    <f:viewParam name="acct" value="#{cepb.beanAcctnum}"/>
+    <f:event type="preRenderView" listener="#{cepb.preRenderView}"/>
 </f:metadata>
 
 <h:body>
     <ui:composition template="/template/common/layout.xhtml">
         <ui:define name="content">
-
-            <div id="main-content" class="content_section" style="background-color: #fff; padding: 10px;">
+            <div id="main-content" class="content_section" style="background-color: #f5f5f5; padding: 5px;">
                 <div id="wrapper" class="container">
-                    <p:messages/>
+                    <h:form id="advisorEditForm">
+                        <p:growl id="advisorEditgrowl" showDetail="true" sticky="true" escape="true" />
+                        <div class="divAdvEntry">
+                            <div class="divAdvRow">
+                                <div class="divAdvImage">
+                                    <p:commandLink update=":custDialogForm:profileDataEntryid" onclick="PF('custProfileDialog').show();">
+                                        <p:graphicImage value="/images/settings_user-128.png" width="40" height="40"/>
+                                    </p:commandLink>
+                                </div>
+                                <div class="divAdvSecond" style="vertical-align: top">
+                                    <h:outputLabel value="Saving for"
+                                                  styleClass="invLabel" style="vertical-align: top; font-weight: bold"/>
+                                    &nbsp;
+                                    <p:selectOneMenu value="#{cepb.accountType}"
+                                                     update=":advisorEditForm">
+                                        <p:ajax listener="#{cepb.selectedAccountType}" update="@form"/>
+                                        <f:selectItem itemLabel="Retirement" itemValue="Retirement"/>
+                                        <f:selectItem itemLabel="Generate Income" itemValue="Income"/>
+                                        <f:selectItem itemLabel="Grow Wealth" itemValue="Wealth"/>
+                                    </p:selectOneMenu>
+                                    <img alt="Edit" src="/images/Pencil-icon.png" style="height: 8px; width: 8px;"/>
+                                </div>
+                                <div class="divAdvThird">
+                                    <p:inplace>
+                                        <f:facet name="output">
+                                            <h:outputText value="#{cepb.defaultAge}"
+                                                          styleClass="invLabel" style="width:110px; font-size: 1.2em"/>
+                                            <img alt="Edit" src="/images/Pencil-icon.png" style="height: 8px; width: 8px;"/>
+                                        </f:facet>
+                                        <f:facet name="input">
+                                            <p:inputText styleClass="invInput" style="width:35px; font-size: 1.2em"
+                                                         value="#{cepb.age}"
+                                                         maxlength="3" size="3">
+                                                <pe:keyFilter regEx="/[\d]/"/>
+                                                <p:ajax event="blur" listener="#{cepb.consumerRefresh}" update="@form"/>
+                                            </p:inputText>
+                                        </f:facet>
+                                    </p:inplace>
+                                </div>
+                                <div class="divAdvFourth">
+                                    <p:inplace>
+                                        <f:facet name="output">
+                                            <h:outputText value="#{cepb.defaultInvestment}"
+                                                          styleClass="invLabel"  style="width:110px; font-size: 1.2em"
+                                                          size="8" maxlength="9">
+                                                <f:convertNumber pattern="$ #,###,###"/>
+                                            </h:outputText>
+                                            <img alt="Edit" src="/images/Pencil-icon.png" style="height: 8px; width: 8px;"/>
+                                        </f:facet>
+                                        <f:facet name="input">
+                                            <pe:inputNumber styleClass="invInput" style="width:110px; font-size: 1.2em"
+                                                            value="#{cepb.initialInvestment}"
+                                                            symbol="$ " decimalPlaces="0" thousandSeparator=","
+                                                            size="8" maxlength="9">
+                                                <p:ajax event="blur" listener="#{cepb.refresh}" update="@form"/>
+                                            </pe:inputNumber>
+                                        </f:facet>
+                                    </p:inplace>
+                                </div>
+                                <div class="divAdvFifth">
+                                    <p:inplace>
+                                        <f:facet name="output">
+                                            <h:outputText value="#{cepb.defaultRiskIndex}"
+                                                          styleClass="invLabel" style="width:110px; font-size: 1.2em"/>
+                                            <img alt="Edit" src="/images/Pencil-icon.png" style="height: 8px; width: 8px;"/>
+                                        </f:facet>
+                                        <f:facet name="input">
+                                            <p:inputText styleClass="invInput" style="width:35px; font-size: 1.2em"
+                                                         value="#{cepb.defaultRiskIndex}"
+                                                         maxlength="3" size="3">
+                                                <pe:keyFilter regEx="/[\d]/"/>
+                                                <p:ajax event="blur" listener="#{cepb.consumerRefresh}" update="@form"/>
+                                            </p:inputText>
+                                        </f:facet>
+                                    </p:inplace>
+                                </div>
+                                <div class="divAdvSixth">
+                                    <p:graphicImage id="profileHelpImg" value="/images/Cute-Ball-Help-icon.png"
+                                                    style="cursor:pointer; width:20px; height:20px" title="Help"/>
+                                    <p:overlayPanel id="profileHelpPanel" for="profileHelpImg"
+                                                    showEffect="blind" hideEffect="explode" showEvent="mouseover"
+                                                    dismissable="true" showCloseIcon="true" dynamic="true">
+                                        <p:scrollPanel mode="native"
+                                                       style="width:250px;height:250px; background: #fff;">
+                                            <p:fieldset legend="Profile" toggleable="true" toggleSpeed="500">
+                                                <p:ajax event="toggle"/>
+                                                <h:panelGrid columns="2" cellpadding="5" style="vertical-align: top">
+                                                    <p:graphicImage value="/images/settings_user-128.png"/>
+                                                    <h:outputText
+                                                            value="Use this Icon to Create/Edit account.  Each Portfolio is created with Unique username.  All data must be filled in order to create valid account for this portfolio.">
 
-                    <h:form id="profile">
-                        <p:wizard id="manageaccount" flowListener="#{cBean.onFlowProcess}" update="@form">
-                            <p:tab id="tab1" title="Goals">
-                                <ui:include src="/pages/consumer/goals.xhtml"/>
-                            </p:tab>
+                                                    </h:outputText>
+                                                </h:panelGrid>
+                                            </p:fieldset>
+                                            <p:fieldset legend="Panel" toggleable="true" toggleSpeed="500">
+                                                <p:ajax event="toggle"/>
+                                                <h:panelGrid columns="1" cellpadding="5">
+                                                    <strong>Saving for</strong>
+                                                    <ul>
+                                                        <li>
+                                                            Retirement - The porfolio is created as non-taxable long term strategy. Assumed age of retirement is considered to be 65. If you wish to over-ride this option, please use the profile settings.
+                                                        </li>
+                                                        <li>
+                                                            Build Wealth - This is a long term taxable strategy of 10+ years of investment. One can change the "Investment Strategy" to match your investment goals.
+                                                        </li>
+                                                        <li>
+                                                            Safety Net - This is a short term taxable strategy of less then 10 years of investment. One can change the "Investment Strategy" to match your investment goals.
+                                                        </li>
 
-                            <p:tab id="tab2" title="Financials">
-                                <ui:include src="/pages/consumer/debtandliabilities.xhtml"/>
-                            </p:tab>
+                                                    </ul>
 
-                            <p:tab id="tab3" title="Risk Tolerance" >
-                                <ui:include src="/pages/consumer/risktolerance.xhtml"/>
-                            </p:tab>
+                                                    <strong>Investment Strategy</strong>
+                                                    <h:outputText
+                                                            value="These are options provided for creating a specialized investment strategy.  Core is default recommended strategy."/>
+                                                </h:panelGrid>
+                                            </p:fieldset>
 
-                            <p:tab id="tab4" title="Asset Allocation" >
-                                <ui:include src="/pages/consumer/alloc.xhtml"/>
-                            </p:tab>
+                                        </p:scrollPanel>
+                                    </p:overlayPanel>
+                                </div>
 
-                            <p:tab id="tab5" title="Portfolio" >
-                                <ui:include src="/pages/consumer/tradeReview.xhtml"/>
-                            </p:tab>
+                            </div>
+                            <div class="divAdvRow">
+                                <div class="divAdvImage">
+                                </div>
+                                <div class="divAdvSecond" style="vertical-align: top">
+                                </div>
+                                <div class="divAdvThird">
+                                    Age
+                                </div>
+                                <div class="divAdvFourth">
+                                    Investment
+                                </div>
+                                <div class="divAdvFifth">
+                                    <p:commandButton value="Risk" type="button" onclick="PF('riskQuestionDialog').show();" />
+                                </div>
+                                <div class="divAdvSixth">
+                                    <p:commandButton value="Next"
+                                                     actionListener="#{cepb.saveProfile}"/>
+                                </div>
+                            </div>
 
-                            <p:tab id="tab6" title="Funding">
-                                <ui:include src="/pages/consumer/funding.xhtml"/>
-                            </p:tab>
-                        </p:wizard>
+                        </div>
+
+                        <p:outputPanel id="workArea" styleClass="invNBgrid" style="min-height: 600px">
+                            <p:messages autoUpdate="true"/>
+                            <div class="divGraphArea">
+                              <ui:include src="/pages/consumer/graphs.xhtml"/>
+                            </div>
+
+                            <div class="divDetailArea">
+                                <ui:include src="/pages/consumer/details.xhtml"/>
+                            </div>
+                        </p:outputPanel>
+
                     </h:form>
+
+                    <ui:include src="/pages/consumer/addProfileDialogs.xhtml"/>
+                    <ui:include src="/pages/consumer/riskQuestions.xhtml"/>
+
                 </div>
             </div>
 
-         </ui:define>
+
+        </ui:define>
     </ui:composition>
+
 </h:body>
 </html>
+
+
