--- a/invessence/modules/web/src/main/webapp/access-denied.xhtml
+++ b/invessence/modules/web/src/main/webapp/access-denied.xhtml
@@ -37,9 +37,8 @@
                     <span class="Wid100 DispBlock Fs18 red">Sorry, but you have no access to this page.<br/>
                     </span>
                     <div class="EmptyBox30"></div>
-                    <p:button  value="Back to Dashboard" styleClass="Fs16 RedButton">
-                        <p:ajax event="onclick" actionListener="#{menu.redirectStartPage()}"/>
-                    </p:button>
+                    <p:commandButton value="Back to Dashboard" styleClass="Fs16 RedButton"
+                                     actionListener="#{menu.redirectStartPage()}"/>
                     <div class="EmptyBox50"></div>
                 </div>
             </div>
